--- a/Project-1-final.html
+++ b/Project-1-final.html
@@ -9,7 +9,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
-<meta name="author" content="Daniel Short" />
+<meta name="author" content="Grace Rogers and Daniel Short" />
 
 
 <title>Project 1 final</title>
@@ -178,7 +178,7 @@ summary {
 
 
 <h1 class="title toc-ignore">Project 1 final</h1>
-<h4 class="author">Daniel Short</h4>
+<h4 class="author">Grace Rogers and Daniel Short</h4>
 <h4 class="date">4/2/2020</h4>
 
 </div>
@@ -714,7 +714,7 @@ plot(Housing_model_final)</code></pre>
 ## elemedison:statussld   64.848751 150.65270
 ## elemharris:statussld    6.114352 111.36591
 ## elemparker:statussld          NA        NA</code></pre>
-<p>illustrate your model’s use with a 95% confidence interval for the mean response #### not sure what to put ###</p>
+<p>The 95% confidence interval for the mean response in the final model is: The 95% confidence interval of the mean predictions for the Housing data is between 196.4246 thousand and 371.2406 thousand dollars.</p>
 <pre class="r"><code>predict&lt;-c(1:72)
 predict&lt;-predict(Housing_model_final, data=Housing)
 mean(predict)</code></pre>
@@ -725,7 +725,6 @@ mean(predict)</code></pre>
 <pre><code>## [1] 371.2406</code></pre>
 <pre class="r"><code>mean(predict)-1.96*sd(predict)</code></pre>
 <pre><code>## [1] 196.4246</code></pre>
-<p>The 95% confidence inveral of the mean predictions for the Housing data is between 196.4246 thousand and 371.2406 thousand dollars.</p>
 <p>The 95% prediction interval for an individual response for a hypothetical house of your choosing.</p>
 <pre class="r"><code>new_house &lt;- data.frame(lot = 7, garagesize = 2, elem = &quot;parker&quot;, status = &quot;pen&quot;)
 
